# bevy-ascii-effect

./: Cargo.toml  README.md
assets/: ascii.wgsl  font.json  pixel.wgsl
examples/: test.rs  ui.rs
src/: acii_render.rs  ascii.rs  ascii_renderer.rs  lib.rs  main.rs
src/render/: ascii.rs  ascii.wgsl  dither.rs  mod.rs  pixel.rs  ui.rs
src/ui/: bounds.rs  buffer.rs  button.rs  character.rs  command.rs  component.rs  mod.rs  node.rs  position.rs  util.rs
src/ui/component/: button.rs  mod.rs
