[package]
name = "bevy-ascii"
version = "0.1.0"
edition = "2021"

[lib]
name = "BevyAsciiEffect"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.22.1"
bevy_panorbit_camera = "0.9.2"
image = "0.24.7"
textwrap = "0.16.0"
