[package]
name = "bevy-ascii"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_ascii"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23.0"
image = "0.24.7"
textwrap = "0.16.0"

[dev-dependencies]
bevy_panorbit_camera = "0.16.0"
